# euroc_planning

./: .gitignore  .gitmodules  CMakeLists.txt  config.dox  package.xml  startup
suturo_planning_3rd_party/cl_libyaml/: CMakeLists.txt  package.xml
suturo_planning_3rd_party/cl_ppcre/: CMakeLists.txt  package.xml
suturo_planning_3rd_party/cl_yaml/: CMakeLists.txt  package.xml
suturo_planning_3rd_party/cl_yaml/asdf/: cl-yaml-test.asd  cl-yaml.asd
suturo_planning_3rd_party/cl_yaml/src/: cl-yaml.asd
suturo_planning_3rd_party/clod/: .hg_archival.txt  CMakeLists.txt  clod.asd  clod.lisp  clod.lisp~  (+2 more)
suturo_planning_3rd_party/parse_number/: CMakeLists.txt  package.xml
suturo_planning_3rd_party/parse_number/asdf/: parse-number.asd
suturo_planning_constants/: CMakeLists.txt  package.xml  suturo-planning-constants.asd  suturo-planning-constants.asd~
suturo_planning_environment/: CMakeLists.txt  package.xml  suturo-planning-environment.asd
suturo_planning_executive/: CMakeLists.txt  package.xml  suturo-planning-executive.asd
suturo_planning_executive/doc/: suturo-planning-executive2.html  suturo-planning-executive2.org
suturo_planning_executive/launch/: logging.launch  task1.launch  task1_v1.yml  task1_v3.yml  task1_without_planning.launch
suturo_planning_executive/scripts/: compile  compile.lisp  doc  doc.lisp  mongodb_log  run  run.lisp  start_simulator  task  task.lisp
suturo_planning_executive/src/: belief.lisp  package.lisp  suturo-planning-executive.lisp
suturo_planning_interface/: CMakeLists.txt  package.xml  setup.py
suturo_planning_interface/src/suturo_planning_interface/: check_placement.py  choose_object.py  classify_objects.py  clean_up_plan.py  focus_objects.py  grasp_object.py  hammertime.py  init_task1.py  mathemagie.py  place_object.py  pose_estimate_objects.py  scan_map.py  scan_obstacles.py  scan_shadow.py  search_objects.py  start_nodes.py  start_services.py  start_sim.py  startup.py  tasks.py  tidy_up.py  toplevel.py  utils.py
suturo_planning_manipulation/: CMakeLists.txt  package.xml  setup.py
suturo_planning_perception/: CMakeLists.txt  package.xml  setup.py
suturo_planning_planlib/: CMakeLists.txt  package.xml  suturo-planning-planlib.asd
suturo_planning_planlib/doc/: suturo-planning-planlib2.html  suturo-planning-planlib2.html~  suturo-planning-planlib2.org
suturo_planning_planlib/src/: goals.lisp  package.lisp  search-objects.lisp  suturo-planning-plan-choose-object.lisp  suturo-planning-plan-choose-objects.lisp  suturo-planning-plan-classify-objects.lisp  suturo-planning-plan-clean-up-plan.lisp  suturo-planning-plan-find-objects-in-map.lisp  suturo-planning-plan-focus-objects.lisp  suturo-planning-plan-grasp-object.lisp  suturo-planning-plan-init.lisp  suturo-planning-plan-pose-estimate-object.lisp  suturo-planning-plan-scan-map-mast-cam.lisp  suturo-planning-plan-scan-obstacles.lisp  suturo-planning-plan-scan-shadow.lisp  suturo-planning-plan-search-objects.lisp  suturo-planning-plan-utils.lisp  suturo-planning-plan.lisp  suturo-planning-planlib.lisp
suturo_planning_plans/: CMakeLists.txt  package.xml  setup.py
suturo_planning_pm_manipulation/: CMakeLists.txt  package.xml  suturo-planning-pm-manipulation.asd
suturo_planning_pm_perception/: CMakeLists.txt  package.xml  suturo-planning-pm-perception.asd
suturo_planning_pm_perception/asdf/: suturo-planning-pm-perception.asd
suturo_planning_pm_perception/doc/: suturo-planning-pm-perception.html  suturo-planning-pm-perception.org  suturo-planning-pm-perception2.html  suturo-planning-pm-perception2.html~
suturo_planning_pm_perception/src/: designators.lisp  package.lisp  recognized-object.lisp  search-objects.lisp  suturo-planning-plan.lisp  suturo-planning-pm-perception-find-objects-in-map.lisp  suturo-planning-pm-perception.lisp
suturo_planning_search/: CMakeLists.txt  package.xml  setup.py
suturo_planning_startup/: CMakeLists.txt  package.xml  startup
suturo_planning_task_selector/: CMakeLists.txt  package.xml  setup.py
suturo_planning_visualization/: CMakeLists.txt  package.xml  setup.py
suturo_planning_yaml_pars0r/: CMakeLists.txt  package.xml  setup.py
suturo_planning_yaml_parser/: __init__.py
(+125 files in other folders)
