cmake_minimum_required(VERSION 2.8.3)
project(suturo_planning_planlib)

find_package(catkin REQUIRED COMPONENTS
  std_msgs
  tf
)

################################################
## Declare ROS messages, services and actions ##
################################################

###################################
## catkin specific configuration ##
###################################

###########
## Build ##
###########

#############
## Install ##
#############

#############
## Testing ##
#############

