cmake_minimum_required(VERSION 2.8.3)
project(suturo_planning_pm_perception)

find_package(catkin REQUIRED COMPONENTS
  euroc_c2_msgs
  std_msgs)

################################################
## Declare ROS messages, services and actions ##
################################################

###################################
## catkin specific configuration ##
###################################

###########
## Build ##
###########

#############
## Install ##
#############

#############
## Testing ##
#############

