<package>
  <name>parse_number</name>
  <version>0.0.1</version>
  <description>
    package automatically imported from quicklisp.
  </description>

  <author email="bla@bla.org">See sources</author>
  <maintainer email="bla@bla.org">See sources</maintainer>

  <license>BSD</license>
  <url type="website">http://ros.org/</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sbcl</build_depend>
  <run_depend>sbcl</run_depend>
</package>
